tests/paczka1/small_fuzzy/17265877.err
Error in line 1: PnHu3JtTD A305 45,2
Error in line 7: yeaX5el S918 30,9
Error in line 13: yeaX5el A77 35,1
